<resources xmlns:android="http://schemas.android.com/tools">
    <string name="google_maps_api_key">AIzaSyCf_ruUG0LjDm94LrIyMYDDFbC_tyAiMlc</string>
    <string name="Order_history">Order History</string>
    <string name="current_order">Current Order</string>
    <string name="app_name">JiHuzzur</string>
    <string name="title_home">Home</string>
    <string name="Search">Search</string>
    <string name="My_Booking">My Booking</string>
    <string name="Help_Center">Help Center</string>
    <string name="Master">Master</string>
    <string name="Profile">Profile</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_user_home">UserHome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string-array name="Appliance">
        <item android:icon="@drawable/appliance_repair" android:showAsAction="always">AC Service and Repair</item>
        <item>RO or water Purifier Repair</item>
        <item>Washing Machine Repair</item>
        <item>Refrigerator Repair</item>
        <item>Microwave Repair</item>
        <item>Chimney Cleaning and Repair</item>
        <item>Television Repair and Installation</item>
        <item>Geyser/Water Heater Repair </item>
        <item>Laptop Repair</item>
        <item>iPad,Mac Repair</item>
        <item>Mobile Screen Repair </item>
        <item>Computer Repair</item>
    </string-array>
    <string name="permission_denied_explanation">You have not granted location permission. So the service cannot be started.</string>
    <string name="settings">settings</string>
    <string name="title_alert_no_intenet">No internet</string>
    <string name="msg_alert_no_internet">Please make sure that you have active internet connection.</string>
    <string name="no_google_playservice_available">No Google Playservice found. Please install it.</string>
    <string name="msg_location_service_not_started">Location Tracking Not Started</string>
    <string name="msg_location_service_started">Location Tracking Started</string>
    <string name="btn_label_refresh">Refresh</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_mobno">MobNo</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_customer_home_page"></string>
    <string name="title_activity_admin_home_page"></string>
    <string name="title_activity_employee_home_page"></string>
    <string name="homecleaning"><![CDATA[Home Cleaning & Repairs]]></string>
    <string name="massage"><![CDATA[Appliance & Repairs]]></string>
    <string name="appliance"><![CDATA[Appliance & Repair]]></string>
    <string name="truck"><![CDATA[Truck loader Transportation]]></string>
    <string name="ring"><![CDATA[Gold,Silver & Platinum Jewellary]]></string>
    <string name="teacher"><![CDATA[Home Tutorial & Online Tutorial]]></string>
    <string name="washing"><![CDATA[Washing Machine repairs]]></string>
    <string name="complaint">Complain</string>
    <string name="title_activity_form_filling">FormFilling</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="cancel"><![CDATA[Cancel & Reschedule]]></string>
    <string name="manage">Manage all your bookings</string>
    <string name="getHelp">Get help with all previous bookings</string>
    <string name="popular">Popular Solution</string>
    <string name="cancel_change">Cancel,change time of service or get help</string>
    <string name="Jihuju_thought">JiHuzzur Insurance Protection Program</string>
    <string name="upto">Upto Rs. 10.000 insurance protection with every service request</string>
    <string name="learn_more"><u>Learn More</u></string>
    <string name="account">Account Settings</string>
    <string name="change_mobile">Change your mobile number and email</string>
    <string name="faq">F.A.Q</string>
    <string name="booking">Booking Services</string>
    <string name="payment">Payment for Services</string>
    <string name="Aguid">A guide to GHujur</string>
    <string name="NoActive">No active bookings</string>
    <string name="NoHistory">No history of bookings</string>
    <string name="you_can">You can start a new booking by placing a request now</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="order">Order</string>
</resources>