<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_booking"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/My_Booking" />
        <item
            android:id="@+id/nav_review"
            android:icon="@drawable/ic_stars_black_24dp"
            android:title="Review" />
        <item
            android:id="@+id/nav_complaint"
            android:icon="@drawable/ic_comment_black_24dp"
            android:title="@string/complaint" />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/order" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_settings_power_black_24dp"
            android:title="logout" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
