<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminActivity.AdminMasterActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        >

    </android.support.v7.widget.Toolbar>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="567dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp">

                <FrameLayout
                    android:id="@+id/content"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" />

                <LinearLayout
                    android:id="@+id/l0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:text="Test">

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="90dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@mipmap/jihuzur" />
                    </android.support.v7.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/l1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/l0"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:text="Test">

                    <android.support.v7.widget.CardView
                        android:id="@+id/homeCleancardViewOne"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        card_view:cardCornerRadius="5dp"
                        card_view:cardElevation="2dp"
                        card_view:contentPadding="16dp">

                        <ImageView
                            android:id="@+id/homecleaning"
                            android:layout_width="30dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_horizontal"
                            android:src="@mipmap/homecleaning" />

                        <TextView
                            android:id="@+id/homecleaningTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:gravity="center"
                            android:text="@string/homecleaning"
                            android:textColor="@color/colorPrimary"
                            android:textSize="10sp"
                            android:textStyle="bold" />
                    </android.support.v7.widget.CardView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1.5" />

                    <android.support.v7.widget.CardView
                        android:id="@+id/appliancecardview"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        card_view:cardCornerRadius="5dp"
                        card_view:cardElevation="2dp"
                        card_view:contentPadding="16dp">

                        <ImageView
                            android:id="@+id/appliance"
                            android:layout_width="30dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_horizontal"
                            android:src="@mipmap/massage" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:gravity="center"
                            android:text="@string/appliance"
                            android:textColor="@color/colorPrimary"
                            android:textSize="10sp"
                            android:textStyle="bold" />
                    </android.support.v7.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/l2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/l1"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:text="Test">

                    <android.support.v7.widget.CardView
                        android:id="@+id/cardViewTwo"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        card_view:cardCornerRadius="5dp"
                        card_view:cardElevation="2dp"
                        card_view:contentPadding="16dp">

                        <ImageView
                            android:id="@+id/moving"
                            android:layout_width="30dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_horizontal"
                            android:src="@mipmap/movingtruck" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:gravity="center"
                            android:text="@string/truck"
                            android:textColor="@color/colorPrimary"
                            android:textSize="10sp"
                            android:textStyle="bold" />
                    </android.support.v7.widget.CardView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1.5" />

                    <android.support.v7.widget.CardView
                        android:id="@+id/cardViewTwo1"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        card_view:cardCornerRadius="5dp"
                        card_view:cardElevation="2dp"
                        card_view:contentPadding="16dp">

                        <ImageView
                            android:id="@+id/ring"
                            android:layout_width="30dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_horizontal"
                            android:src="@mipmap/rings" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:gravity="center"
                            android:text="@string/ring"
                            android:textColor="@color/colorPrimary"
                            android:textSize="10sp"
                            android:textStyle="bold" />
                    </android.support.v7.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/l3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/l2"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:text="Test">

                    <android.support.v7.widget.CardView
                        android:id="@+id/cardViewThree"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        card_view:cardCornerRadius="5dp"
                        card_view:cardElevation="2dp"
                        card_view:contentPadding="16dp">

                        <ImageView
                            android:id="@+id/teacher"
                            android:layout_width="30dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_horizontal"
                            android:src="@mipmap/teacher" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:gravity="center"
                            android:text="@string/teacher"
                            android:textColor="@color/colorPrimary"
                            android:textSize="10sp"
                            android:textStyle="bold" />
                    </android.support.v7.widget.CardView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1.5" />

                    <android.support.v7.widget.CardView
                        android:id="@+id/cardViewThree1"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        card_view:cardCornerRadius="5dp"
                        card_view:cardElevation="2dp"
                        card_view:contentPadding="16dp">

                        <ImageView
                            android:id="@+id/wasingMachine"
                            android:layout_width="30dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_horizontal"
                            android:src="@mipmap/washingmachine" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:gravity="center"
                            android:text="@string/washing"
                            android:textColor="@color/colorPrimary"
                            android:textSize="10sp"
                            android:textStyle="bold" />
                    </android.support.v7.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/l4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/l3"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:text="Test">

                    <android.support.v7.widget.CardView
                        android:id="@+id/cardViewThree11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        card_view:cardCornerRadius="5dp"
                        card_view:cardElevation="2dp"
                        card_view:contentPadding="16dp">

                        <LinearLayout
                            android:id="@+id/layoutContainer2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/popular_textView"
                            android:layout_margin="10dp"
                            android:layout_marginTop="30dp"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="15"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="40dp"
                                    android:layout_height="40dp"
                                    android:layout_marginTop="10dp"
                                    android:padding="3dp"
                                    android:src="@drawable/prtection" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="4"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:padding="8dp"
                                    android:text="@string/Jihuju_thought"
                                    android:textAlignment="viewStart"
                                    android:textColor="@color/colorBlack"
                                    android:textSize="16sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:padding="8dp"
                                    android:text="@string/upto"
                                    android:textAlignment="viewStart"
                                    android:textColor="@color/greydark"
                                    android:textSize="13sp"
                                    android:textStyle="normal" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:padding="8dp"
                                    android:text="@string/learn_more"
                                    android:textAlignment="viewStart"
                                    android:textColor="@color/blue"
                                    android:textSize="13sp"
                                    android:textStyle="normal" />
                            </LinearLayout>

                        </LinearLayout>
                    </android.support.v7.widget.CardView>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_below="@+id/l4" />

            </RelativeLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>

</android.support.constraint.ConstraintLayout>